--- a/app/build.gradle
+++ b/app/build.gradle
@@ -181,7 +181,7 @@ dependencies {
     //        exclude module: 'support-v4'
 
     //    }
-    implementation('com.facebook.android:facebook-android-sdk:7.1.0') {
+    implementation('com.facebook.android:facebook-android-sdk:12.1.0') {
 //        exclude group : 'com.android.support', module : 'support-compat'
     }
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
@@ -252,5 +252,6 @@ dependencies {
     implementation 'com.github.tfcporciuncula:phonemoji:1.1.1'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'uk.co.samuelwall:material-tap-target-prompt:3.3.0'
+    implementation 'com.google.firebase:firebase-appcheck-debug:16.0.0-beta03'
 //    implementation 'com.github.amanjeetsingh150:ImageZipper:1.3'
 }
