--- a/gradle.properties
+++ b/gradle.properties
@@ -15,4 +15,4 @@ android.useAndroidX=true
 android.enableJetifier=true
 npm install --save-dev jetifier
 npx jetify
-android.jetifier.blacklist = butterknife.*\\.jar
+android.jetifier.ignorelist = butterknife.*\\.jar
